src/test/deca/context/valid/op_un.deca
{
boolean y = true;
boolean x = !y && false;
int z = --1;
}
