src/test/deca/context/invalid/print_wrong_type.deca
{
boolean x = 1 > 3;
print(x, true);
}
